--- a/ZH/about.html
+++ b/ZH/about.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>About Us - UNC Foundation</title>
+  <title>有關我們 - UNC基金會</title>
   <meta charset="UTF-8">
   <meta name="description" content="TRPG">
   <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
@@ -32,7 +32,7 @@
   </div>
 
   <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
+    <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">檔案</a>
   </div>
 
   <div class="w3-col l6 m0 s0">
@@ -40,15 +40,15 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="about.html" class="w3-button w3-block w3-hover-pale-green">ABOUT</a>
+    <a href="about.html" class="w3-button w3-block w3-hover-pale-green">關於我們</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="" class="w3-button w3-block w3-hover-pale-green">CONTACT</a>
+    <a href="" class="w3-button w3-block w3-hover-pale-green">聯絡</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="../ZH/about.html" class="w3-button w3-block w3-hover-pale-green">LANGUAGE</a>
+    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green">語言切換</a>
   </div>
 
 </div>
@@ -56,28 +56,27 @@
 
 <div class="w3-padding-large f-sofiasans">
   <div class="" style="margin-left: 10%; margin-right: 10%;">
-    <h2 class="f-oswald" style="margin-left: 1%;">About Us</h2>
+    <h2 class="f-oswald" style="margin-left: 1%;">關於我們</h2>
     <hr style="color: darkgray; margin-top: -0.5%;">
   </div>
   
     <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
       <div class="w3-col w3-row-padding" style="width:60%">
         
-        <h3 class="f-oswald"><u>The UNC Foundation</u></h3>
+        <h3 class="f-oswald"><u>UNC基金會</u></h3>
           <p class="w3-left-align">
-            <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
+            <b>UNC基金會</b>的核心使命是確保異常物品、實體及現象得到安全的收容及保護，同時減少對人類造成的潛在危險。
             <br>
-            <strong>The Foundation</strong> operates globally, with extensive facilities and branches, and is dedicated to providing highly specialized training to <strong>Foundation personnel</strong>, known as <strong>Foundation operatives</strong>, to enable mastery of skills in fields such as science, engineering, and containment procedures. 
+            <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
             <br>
-            As <strong>Foundation operatives</strong>, personnel assume significant personal risk to tirelessly monitor and contain anomalous objects and phenomena. 
+            作為<b>基金會調查員</b>，人員須冒著極大的個人風險，不遺餘力地監測和收容異常物品和現象。
             <br>
-            As a highly confidential organization, the public is completely unaware of the existence of <strong>the UNC Foundation</strong>.
+            作爲高度保密組織，公眾對<b>UNC基金會</b>的存在是完全不知情的。
             <br>
-            Due to our winning the trust and support of major government institutions worldwide, we enjoy special powers to assist in containment operations and research around the world.</p>
-          
+            同時，由於我們贏得了全球各大政府機構的信任及支持，因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
           <p class="w3-left-align">
             <br>
-            <em>"Nullify the Uncommon Chaos."</em>
+            <em>「消除異常混沌。」</em>
           </p>
 
       </div>
