--- a/ZH/index.html
+++ b/ZH/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Home - UNC Foundation</title>
+<title>主頁 - UNC基金會</title>
 <meta charset="UTF-8">
 <meta name="description" content="TRPG">
 <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-          <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
+          <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">檔案</a>
         </div>
 
         <div class="w3-col l6 m0 s0">
@@ -36,18 +36,18 @@
         </div>
 
         <div class="w3-col l1 m2 s6">
-          <a href="about.html" class="w3-button w3-block w3-hover-pale-green">ABOUT</a>
+          <a href="about.html" class="w3-button w3-block w3-hover-pale-green">關於我們</a>
         </div>
 
         <div class="w3-col l1 m2 s6">
-          <a href="" class="w3-button w3-block w3-hover-pale-green">CONTACT</a>
+          <a href="" class="w3-button w3-block w3-hover-pale-green">聯絡</a>
         </div>
 
         <div class="w3-col l1 m2 s6">
-          <a href="../ZH/index.html" class="w3-button w3-block w3-hover-pale-green">LANGUAGE</a>
+          <a href="../EN/index.html" class="w3-button w3-block w3-hover-pale-green">語言切換</a>
         </div>
 
-      </div>
+  </div>
 
       <div>
         
