--- a/EN/about.html
+++ b/EN/about.html
@@ -35,7 +35,7 @@
     <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
   </div>
 
-  <div class="w3-col l6 m0 s0">
+  <div class="w3-col l6 m2 s0">
     <p></p>
   </div>
 
@@ -48,7 +48,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="../ZH/about.html" class="w3-button w3-block w3-hover-pale-green">LANGUAGE</a>
+    <a href="../ZH/about.html" class="w3-button w3-block w3-hover-pale-green"><span><strong><u>EN</u></strong></span>/<span class="w3-text-gray">中文</span></a>
   </div>
 
 </div>
