--- a/ZH/about.html
+++ b/ZH/about.html
@@ -35,7 +35,7 @@
     <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">檔案</a>
   </div>
 
-  <div class="w3-col l6 m0 s0">
+  <div class="w3-col l6 m2 s0">
     <p></p>
   </div>
 
@@ -44,11 +44,11 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="" class="w3-button w3-block w3-hover-pale-green">聯絡</a>
+    <a href="" class="w3-button w3-block w3-hover-pale-green">聯絡我們</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green">語言切換</a>
+    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
   </div>
 
 </div>
