--- a/EN/about.html
+++ b/EN/about.html
@@ -35,7 +35,7 @@
     <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
   </div>
 
-  <div class="w3-col l6 m2 s0">
+  <div class="w3-col l6 m2 s6">
     <p></p>
   </div>
 
@@ -44,7 +44,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="" class="w3-button w3-block w3-hover-pale-green">CONTACT</a>
+    <a href="" class="w3-button w3-block w3-hover-pale-green">SITES</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
@@ -77,7 +77,7 @@
           
           <p class="w3-left-align">
             <br>
-            <em>"Nullify the Uncommon Chaos."</em>
+            <em>"Nullify the Unnatural Chaos."</em>
           </p>
 
       </div>
