--- a/ZH/about.html
+++ b/ZH/about.html
@@ -35,7 +35,7 @@
     <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">檔案</a>
   </div>
 
-  <div class="w3-col l6 m2 s0">
+  <div class="w3-col l6 m2 s6">
     <p></p>
   </div>
 
@@ -44,7 +44,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="" class="w3-button w3-block w3-hover-pale-green">聯絡我們</a>
+    <a href="" class="w3-button w3-block w3-hover-pale-green">站點坐標</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
@@ -63,9 +63,9 @@
     <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
       <div class="w3-col w3-row-padding" style="width:60%">
         
-        <h3 class="f-oswald"><u>UNC基金會</u></h3>
+        <h3 class="f-oswald"><u>非常規事件基金會</u></h3>
           <p class="w3-left-align">
-            <b>UNC基金會</b>的核心使命是確保異常物品、實體及現象得到安全的收容及保護，同時減少對人類造成的潛在危險。
+            <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到安全的收容及保護，同時減少對人類造成的潛在危險。
             <br>
             <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
             <br>
