--- a/EN/index.html
+++ b/EN/index.html
@@ -31,7 +31,7 @@
           <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
         </div>
 
-        <div class="w3-col l6 m2 s0">
+        <div class="w3-col l6 m2 s6">
           <p></p>
         </div>
 
@@ -40,7 +40,7 @@
         </div>
 
         <div class="w3-col l1 m2 s6">
-          <a href="" class="w3-button w3-block w3-hover-pale-green">CONTACT</a>
+          <a href="" class="w3-button w3-block w3-hover-pale-green">SITES</a>
         </div>
 
         <div class="w3-col l1 m2 s6">
