--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gateway</title>
+<title>Gateway - UNC Foundation</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,9 +21,9 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top"><a href="EN/index.html">The UNC Foundation</a></h1>
+    <h1 class="w3-jumbo w3-animate-top w3-row"><a href="EN/index.html" class="l12 m12 s12">The UNC Foundation</a></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Nullify the Uncommon Chaos</p>
+    <p class="w3-large w3-center">Nullify the Unnatural Chaos</p>
   </div>
 </div>
 
