--- a/EN/about.html
+++ b/EN/about.html
@@ -13,7 +13,7 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Sofia+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/w3.css">
   <link rel="stylesheet" href="../css/unc.css">
   <link rel="icon" href="../favicon.ico">
@@ -44,7 +44,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6">
-    <a href="" class="w3-button w3-block w3-hover-pale-green">SITES</a>
+    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green">SITES</a>
   </div>
 
   <div class="w3-col l1 m2 s6">
@@ -84,7 +84,7 @@
 
       <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
         <p>
-        <img src="../material/blacklogo.png" width="75%">
+        <img src="../material/blacklogo.png" width="50%">
         </p>
         </div>
 
