--- a/EN/index.html
+++ b/EN/index.html
@@ -9,17 +9,24 @@
 <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Sofia+Sans&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/w3.css">
 <link rel="stylesheet" href="../css/unc.css">
 <link rel="icon" href="../favicon.ico">
 
 <style>
-</style>
+  body, html {height: 100%}
+  .bgimg {
+    background-image: url(../material/bg2.png);
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+  </style>
 
 </head>
 
-<body>
+<body style="background-color: #0B193C;">
   
   <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
@@ -40,7 +47,7 @@
         </div>
 
         <div class="w3-col l1 m2 s6">
-          <a href="" class="w3-button w3-block w3-hover-pale-green">SITES</a>
+          <a href="sites.html" class="w3-button w3-block w3-hover-pale-green">SITES</a>
         </div>
 
         <div class="w3-col l1 m2 s6">
@@ -49,11 +56,12 @@
 
       </div>
 
-      <div>
-        
+      <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-left" style="margin-left: 5%;">
+          <h1 class="w3-jumbo w3-animate-left w3-row w3-display-left f-sofiasans">Welcome Back, Operative.</h1>
+          <h2 class="w3-xlarge w3-animate-left w3-row w3-display-left f-sofiasans" style="margin-top: -6%; margin-left: 10%;">Please start your work today.</h2>
+        </div>
       </div>
-</div>
 
 </body>
-
 </html>
