--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url(material/bg.png);
+  background-image: url(material/bg1.png);
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -21,7 +21,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-row"><a href="EN/index.html" class="l12 m12 s12">The UNC Foundation</a></h1>
+    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="EN/index.html" class="">The UNC Foundation</a></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Nullify the Unnatural Chaos</p>
   </div>
