--- a/ZH/about.html
+++ b/ZH/about.html
@@ -35,20 +35,20 @@
     <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
   </div>
 
-  <div class="w3-col l6 m2 s6">
-    <p></p>
+  <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+    <p class="w3-display-middle"></p>
   </div>
 
-  <div class="w3-col l1 m2 s6">
-    <a href="about.html" class="w3-button w3-block w3-hover-pale-green">關於我們</a>
+  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+    <a href="about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
   </div>
 
-  <div class="w3-col l1 m2 s6">
-    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green">站點坐標</a>
+  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">站點坐標</a>
   </div>
 
-  <div class="w3-col l1 m2 s6">
-    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
+  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
   </div>
 
 </div>
