--- a/ZH/index.html
+++ b/ZH/index.html
@@ -30,30 +30,30 @@
   
   <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
-        <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-          <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../material/logo.png" height="64"></a>
-        </div>
-
-        <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-          <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
-        </div>
-
-        <div class="w3-col l6 m2 s6">
-          <p></p>
-        </div>
-
-        <div class="w3-col l1 m2 s6">
-          <a href="about.html" class="w3-button w3-block w3-hover-pale-green">關於我們</a>
-        </div>
-
-        <div class="w3-col l1 m2 s6">
-          <a href="sites.html" class="w3-button w3-block w3-hover-pale-green">站點坐標</a>
-        </div>
-
-        <div class="w3-col l1 m2 s6">
-          <a href="../EN/index.html" class="w3-button w3-block w3-hover-pale-green"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
-        </div>
-
+    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../material/logo.png" height="64"></a>
+    </div>
+  
+    <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
+    </div>
+  
+    <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <p class="w3-display-middle"></p>
+    </div>
+  
+    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <a href="about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
+    </div>
+  
+    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">站點坐標</a>
+    </div>
+  
+    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+      <a href="../EN/index.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
+    </div>
+  
   </div>
 
   <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
