--- a/ZH/sites.html
+++ b/ZH/sites.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">站點坐標</a>
+    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">基金會站點</a>
   </div>
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
