--- a/EN/sites.html
+++ b/EN/sites.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
+    <a href="doc/menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
   </div>
 
   <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
@@ -61,29 +61,43 @@
   </div>
   
     <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
-      <div class="w3-col w3-row-padding" style="width:60%">
-        
-        <h3 class="f-oswald">Site-G15, Hansestadt Rostock Germany</h3>
+      <br>
+      <div>
+        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+          <h3 class="f-oswald">
+            Site-G1, Berlin Germany
+          </h3>
           <p class="w3-left-align">
             <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
-            <br>
-            <strong>The Foundation</strong> operates globally, with extensive facilities and branches, and is dedicated to providing highly specialized training to <strong>Foundation personnel</strong>, known as <strong>Foundation operatives</strong>, to enable mastery of skills in fields such as science, engineering, and containment procedures. 
-            <br>
-            As <strong>Foundation operatives</strong>, personnel assume significant personal risk to tirelessly monitor and contain anomalous objects and phenomena. 
-            <br>
-            As a highly confidential organization, the public is completely unaware of the existence of <strong>the UNC Foundation</strong>.
-            <br>
-            Due to our winning the trust and support of major government institutions worldwide, we enjoy special powers to assist in containment operations and research around the world.
           </p>
-
+        </div>
+  
+        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
+          <p>
+          <img src="../material/blacklogo.png" width="35%">
+          </p>
+        </div>
       </div>
 
-      <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-        <p>
-        <img src="../material/blacklogo.png" width="40%">
-        </p>
-        </div>
+      <div class="w3-col w3-row-padding" style="width:100%; margin-top: 1%;">
+      </div>
 
+      <div>
+        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+          <h3 class="f-oswald">
+            Site-G15, Hansestadt Rostock Germany
+          </h3>
+          <p class="w3-left-align">
+            <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
+          </p>
+        </div>
+  
+        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
+          <p>
+          <img src="../material/blacklogo.png" width="35%">
+          </p>
+        </div>
+      </div>
 
   </div></div>
 </body>
