--- a/ZH/about.html
+++ b/ZH/about.html
@@ -14,7 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
   <link rel="stylesheet" href="../css/unc.css">
   <link rel="icon" href="../favicon.ico">
   
