--- a/EN/sites.html
+++ b/EN/sites.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="doc/_menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
+    <a href="doc/0menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
   </div>
 
   <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
