--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+
 <title>Gateway - UNC Foundation</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
+<link rel="stylesheet" href="./style.css">
 <style>
-body,h1 {font-family: "Raleway", sans-serif}
+body, h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
-.bgimg {
-  background-image: url(material/bg1.png);
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
 </style>
+
 </head>
+
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+<div id="particles-js">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="EN/index.html" class="">The UNC Foundation</a></h1>
+    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="EN/index.html" class="w3-text-white">The UNC Foundation</a></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Nullify the Unnatural Chaos</p>
+    <p class="w3-animate-bottom w3-large w3-center w3-text-white">Nullify the Unnatural Chaos</p>
   </div>
 </div>
+
+<script src="particles.js-master/particles.js"></script>
+<script src="particles.js-master/demo/js/app.js"></script>
 
 </body>
 </html>
