--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body, html {height: 100%}
 
 <div id="particles-js">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="EN/index.html" class="w3-text-white">The UNC Foundation</a></h1>
+    <h1 class="w3-jumbo w3-animate-top w3-row w3-middle"><a href="main.html" class="w3-text-white">The UNC Foundation</a></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-animate-bottom w3-large w3-center w3-text-white">Nullify the Unnatural Chaos</p>
   </div>
