--- a/unc/EN/index.html
+++ b/unc/EN/index.html
@@ -18,7 +18,7 @@
 <style>
   body, html {height: 100%}
   .bgimg {
-    background-image: url(../material/bg2.png);
+    background-image: url(../../material/bg2.png);
     min-height: 100%;
     background-position: center;
     background-size: cover;
@@ -32,7 +32,7 @@
   <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
         <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-          <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../material/logo.png" height="64"></a>
+          <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
         </div>
 
         <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
