--- a/unc/EN/about.html
+++ b/unc/EN/about.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Sites - UNC Foundation</title>
+  <title>About Us - UNC Foundation</title>
   <meta charset="UTF-8">
   <meta name="description" content="TRPG">
   <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
@@ -29,7 +29,7 @@
 <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../material/logo.png" height="64"></a>
+    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
   </div>
 
   <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
@@ -49,7 +49,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="../ZH/sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span><strong><u>EN</u></strong></span>/<span class="w3-text-gray">中文</span></a>
+    <a href="../ZH/about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span><strong><u>EN</u></strong></span>/<span class="w3-text-gray">中文</span></a>
   </div>
 
 </div>
@@ -57,48 +57,38 @@
 
 <div class="w3-padding-large f-sofiasans">
   <div class="" style="margin-left: 10%; margin-right: 10%;">
-    <h2 class="f-oswald" style="margin-left: 1%;">Sites Coordinates</h2>
+    <h2 class="f-oswald" style="margin-left: 1%;">About Us</h2>
     <hr style="color: darkgray; margin-top: -0.5%;">
   </div>
   
     <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
-      <br>
-      <div>
-        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
-          <h3 class="f-oswald">
-            Site-G1, Berlin Germany
-          </h3>
+      <div class="w3-col w3-row-padding" style="width:60%">
+        
+        <h3 class="f-oswald"><u>The UNC Foundation</u></h3>
           <p class="w3-left-align">
             <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
-          </p>
-        </div>
-  
-        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-          <p>
-          <img src="../material/blacklogo.png" width="35%">
-          </p>
-        </div>
-      </div>
-
-      <div class="w3-col w3-row-padding" style="width:100%; margin-top: 1%;">
-      </div>
-
-      <div>
-        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
-          <h3 class="f-oswald">
-            Site-G15, Hansestadt Rostock Germany
-          </h3>
+            <br>
+            <strong>The Foundation</strong> operates globally, with extensive facilities and branches, and is dedicated to providing highly specialized training to <strong>Foundation personnel</strong>, known as <strong>Foundation operatives</strong>, to enable mastery of skills in fields such as science, engineering, and containment procedures. 
+            <br>
+            As <strong>Foundation operatives</strong>, personnel assume significant personal risk to tirelessly monitor and contain anomalous objects and phenomena. 
+            <br>
+            As a highly confidential organization, the public is completely unaware of the existence of <strong>the UNC Foundation</strong>.
+            <br>
+            Due to our winning the trust and support of major government institutions worldwide, we enjoy special powers to assist in containment operations and research around the world.</p>
+          
           <p class="w3-left-align">
-            <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
+            <br>
+            <em>"Nullify the Unnatural Chaos."</em>
           </p>
-        </div>
-  
-        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-          <p>
-          <img src="../material/blacklogo.png" width="35%">
-          </p>
-        </div>
+
       </div>
+
+      <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
+        <p>
+        <img src="../../material/blacklogo.png" width="50%">
+        </p>
+        </div>
+
 
   </div></div>
 </body>
