--- a/unc/ZH/sites.html
+++ b/unc/ZH/sites.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>有關我們 - UNC基金會</title>
+  <title>基金會站點 - UNC基金會</title>
   <meta charset="UTF-8">
   <meta name="description" content="TRPG">
   <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
@@ -29,7 +29,7 @@
 <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../material/logo.png" height="64"></a>
+    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
   </div>
 
   <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
@@ -49,7 +49,7 @@
   </div>
 
   <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
+    <a href="../EN/sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
   </div>
 
 </div>
@@ -57,39 +57,50 @@
 
 <div class="w3-padding-large f-sofiasans">
   <div class="" style="margin-left: 10%; margin-right: 10%;">
-    <h2 class="f-oswald" style="margin-left: 1%;">關於我們</h2>
+    <h2 class="f-oswald" style="margin-left: 1%;">站點坐標</h2>
     <hr style="color: darkgray; margin-top: -0.5%;">
   </div>
   
-    <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
-      <div class="w3-col w3-row-padding" style="width:60%">
-        
-        <h3 class="f-oswald"><u>非常規事件基金會</u></h3>
-          <p class="w3-left-align">
-            <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到安全的收容及保護，同時減少對人類造成的潛在危險。
-            <br>
-            <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
-            <br>
-            作為<b>基金會調查員</b>，人員須冒著極大的個人風險，不遺餘力地監測和收容異常物品和現象。
-            <br>
-            作爲高度保密組織，公眾對<b>UNC基金會</b>的存在是完全不知情的。
-            <br>
-            同時，由於我們贏得了全球各大政府機構的信任及支持，因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
-          <p class="w3-left-align">
-            <br>
-            <em>「消除異常混沌。」</em>
-          </p>
-
+  <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
+    <br>
+    <div>
+      <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+        <h3 class="f-oswald">
+          站點-G1，德國柏林
+        </h3>
+        <p class="w3-left-align">
+          <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
+        </p>
       </div>
 
       <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
         <p>
-        <img src="../material/blacklogo.png" width="50%">
+        <img src="../../material/blacklogo.png" width="35%">
         </p>
-        </div>
+      </div>
+    </div>
 
+    <div class="w3-col w3-row-padding" style="width:100%; margin-top: 1%;">
+    </div>
 
-  </div></div>
+    <div>
+      <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+        <h3 class="f-oswald">
+          站點-G15，德國羅斯托克
+        </h3>
+        <p class="w3-left-align">
+          <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
+        </p>
+      </div>
+
+      <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
+        <p>
+        <img src="../../material/blacklogo.png" width="35%">
+        </p>
+      </div>
+    </div>
+
+</div></div>
 </body>
 
 </html>
