--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
       <div class="w3-display-topleft" style="margin-left: 5%;">
         <br><br><br>
         <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="unc/EN/index.html">UNC</a></p>
+            href="unc/EN/index.html">The UNC Foundation - Nullify the Unnatural Chaos</a></p>
         <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
             href="rag/index.html">Ragnarok</a></p>
+        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
+            href="dipsin/index.html">Dip Sin - SM3611</a></p>
       </div>
     </div>
 
