--- a/dipsin/index.html
+++ b/dipsin/index.html
@@ -22,10 +22,10 @@ body, html {height: 100%}
     <div class="w3-text-white">
 
       <div class="w3-display-top">
-        <h2 class="w3-jumbo w3-animate-left w3-center">Dip Sin Sound Effect
+        <h2 class="w3-jumbo w3-animate-top w3-center">Dip Sin Sound Effect
           List</h2>
-        <p class="w3-animate-right w3-large w3-center"
-          style="letter-spacing: 20px;">BOTTOM TEXT</p>
+        <p class="w3-animate-top w3-large w3-center"
+          style="letter-spacing: 20px; margin-top: -0.5%;">BOTTOM TEXT</p>
       </div>
 
       <div>
@@ -35,7 +35,7 @@ body, html {height: 100%}
           style="margin:auto;width:80%">
       </div>
 
-      <div id="main" class="small">
+      <div id="main" class="small w3-animate-left">
         <div style="margin-top: -1.5%;"> <!--Start of BGM div-->
           <div style="margin-left: 1.5%; margin-top: -15px;">
 
@@ -49,7 +49,7 @@ body, html {height: 100%}
                 <td style="padding-left: 7%; width: 50%;"><h3>Six Forty Seven</h3></td>
                 <td style="width: 10%;"></td>
                 <td style="vertical-align: middle;">
-                  <audio controls>
+                  <audio controls style="width: 200%;">
                     <source src="material/sixFortySeven.ogg" type="audio/ogg">
                     <source src="material/sixFortySeven.mp3" type="audio/mpeg">
                   </audio>
@@ -59,7 +59,7 @@ body, html {height: 100%}
                 <td style="padding-left: 7%; width: 50%;"><h3>Airria (Hanging Garden)</h3></td>
                 <td style="width: 10%;"></td>
                 <td style="vertical-align: middle;">
-                  <audio controls>
+                  <audio controls style="width: 200%;">
                     <source src="material/airria_hangingGarden.ogg" type="audio/ogg">
                     <source src="material/airria_hangingGarden.mp3" type="audio/mpeg">
                   </audio>
@@ -97,6 +97,16 @@ body, html {height: 100%}
                   <audio controls>
                     <source src="material/youngLadyLaughing.ogg" type="audio/ogg">
                     <source src="material/youngLadyLaughing.mp3" type="audio/mpeg">
+                  </audio>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding-left: 7%; width: 50%;"><h3>Gravel</h3></td>
+                <td style="width: 10%;"></td>
+                <td style="vertical-align: middle;">
+                  <audio controls>
+                    <source src="material/gravel.ogg" type="audio/ogg">
+                    <source src="material/gravel.mp3" type="audio/mpeg">
                   </audio>
                 </td>
               </tr>
