--- a/dipsin/index.html
+++ b/dipsin/index.html
@@ -81,6 +81,26 @@ body, html {height: 100%}
                 </td>
               </tr>
               <tr>
+                <td style="padding-left: 7%; width: 50%;"><h3>Camera Rolling</h3></td>
+                <td style="width: 10%;"></td>
+                <td style="vertical-align: middle;">
+                  <audio controls>
+                    <source src="material/cameraRolling.ogg" type="audio/ogg">
+                    <source src="material/cameraRolling.mp3" type="audio/mpeg">
+                  </audio>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding-left: 7%; width: 50%;"><h3>Gravel</h3></td>
+                <td style="width: 10%;"></td>
+                <td style="vertical-align: middle;">
+                  <audio controls>
+                    <source src="material/gravel.ogg" type="audio/ogg">
+                    <source src="material/gravel.mp3" type="audio/mpeg">
+                  </audio>
+                </td>
+              </tr>
+              <tr>
                 <td style="padding-left: 7%; width: 50%;"><h3>Door Bang</h3></td>
                 <td style="width: 10%;"></td>
                 <td style="vertical-align: middle;">
@@ -97,16 +117,6 @@ body, html {height: 100%}
                   <audio controls>
                     <source src="material/youngLadyLaughing.ogg" type="audio/ogg">
                     <source src="material/youngLadyLaughing.mp3" type="audio/mpeg">
-                  </audio>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding-left: 7%; width: 50%;"><h3>Gravel</h3></td>
-                <td style="width: 10%;"></td>
-                <td style="vertical-align: middle;">
-                  <audio controls>
-                    <source src="material/gravel.ogg" type="audio/ogg">
-                    <source src="material/gravel.mp3" type="audio/mpeg">
                   </audio>
                 </td>
               </tr>
