--- a/unc/ZH/about.html
+++ b/unc/ZH/about.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>有關我們 - UNC基金會</title>
+  <title>關於我們 - UNC基金會</title>
   <meta charset="UTF-8">
   <meta name="description" content="TRPG">
   <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
@@ -66,15 +66,15 @@
         
         <h3 class="f-oswald"><u>非常規事件基金會</u></h3>
           <p class="w3-left-align">
-            <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到安全的收容及保護，同時減少對人類造成的潛在危險。
+            <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到適當的收容及控制，同時避免影響普遍人類的日常生活。
             <br>
             <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
             <br>
             作為<b>基金會調查員</b>，人員須冒著極大的個人風險，不遺餘力地監測和收容異常物品和現象。
             <br>
-            作爲高度保密組織，公眾對<b>UNC基金會</b>的存在是完全不知情的。
+            作爲高度保密組織，公眾對<b>UNC基金會</b>的存在應是不知情的。
             <br>
-            同時，由於我們贏得了全球各大政府機構的信任及支持，因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
+            <b>基金會</b>不受司法管轄權干擾，同時亦被全球各大政府機構授以收容異常物件、實體以及現象的職權與任務。因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
           <p class="w3-left-align">
             <br>
             <em>「消除異常混沌。」</em>
