Lecture notes site

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             href="dipsin/index.html">Dip Sin - SM3611</a></p>
         <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
             href="prsk_counter/songScore.html">プロセカ Counter</a></p>
+        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
+            href="lecture/index.html">Lecture</a></p>
       </div>
     </div>
 
