Many things did

--- a/rag/index.html
+++ b/rag/index.html
@@ -70,7 +70,7 @@
 									<td class="action"><i class="fa fa-star-o"></i></td>
 									<td class="action"><i class="fa fa-bookmark-o"></i></td>
 									<td class="name"><a href="#">Larry Gardner</a></td>
-									<td class="subject"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </a></td>
+									<td class="subject"><a href="mail_1.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </a></td>
 									<td class="time">08:30 PM</td>
 								</tr>
 								<tr>
