--- a/unc/EN/sites.html
+++ b/unc/EN/sites.html
@@ -2,105 +2,131 @@
 
 <html>
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 
-<html>
+  <html>
 
-<head>
-  <title>Sites - UNC Foundation</title>
-  <meta charset="UTF-8">
-  <meta name="description" content="TRPG">
-  <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-  <link rel="stylesheet" href="../css/unc.css">
-  <link rel="icon" href="../favicon.ico">
-  
-  <style>
+    <head>
+      <title>Sites - UNC Foundation</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="TRPG">
+      <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap"
+        rel="stylesheet">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet"
+        href="https://www.w3schools.com/lib/w3-colors-flat.css">
+      <link rel="stylesheet" href="../css/unc.css">
+      <link rel="icon" href="../favicon.ico">
+      <script src="https://mymemunc.github.io/unc/languageSwitch.js"></script>
+
+      <style>
   </style>
-  
-</head>
 
-<body>
-<!---->
-<div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
+    </head>
 
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
-  </div>
+    <body>
+      <!---->
+      <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
-  <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="doc/0menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
-  </div>
-
-  <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <p class="w3-display-middle"></p>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">ABOUT</a>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">SITES</a>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="../ZH/sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span><strong><u>EN</u></strong></span>/<span class="w3-text-gray">中文</span></a>
-  </div>
-
-</div>
-<!---->
-
-<div class="w3-padding-large f-sofiasans">
-  <div class="" style="margin-left: 10%; margin-right: 10%;">
-    <h2 class="f-oswald" style="margin-left: 1%;">Sites Coordinates</h2>
-    <hr style="color: darkgray; margin-top: -0.5%;">
-  </div>
-  
-    <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
-      <br>
-      <div>
-        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
-          <h3 class="f-oswald">
-            Site-G1, Berlin Germany
-          </h3>
-          <p class="w3-left-align">
-            <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
-          </p>
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="index.html"
+            class="w3-button w3-block w3-hover-teal w3-display-middle"><img
+              src="../../material/logo.png" height="64"></a>
         </div>
-  
-        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-          <p>
-          <img src="../../material/blacklogo.png" width="35%">
-          </p>
+
+        <div
+          class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="doc/0menu.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">DOCUMENTATION</a>
         </div>
+
+        <div
+          class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <p class="w3-display-middle"></p>
+        </div>
+
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="about.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">ABOUT</a>
+        </div>
+
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="sites.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">SITES</a>
+        </div>
+
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="../ZH/sites.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span><strong><u>EN</u></strong></span>/<span
+              class="w3-text-gray">中文</span></a>
+        </div>
+
       </div>
+      <!---->
 
-      <div class="w3-col w3-row-padding" style="width:100%; margin-top: 1%;">
-      </div>
-
-      <div>
-        <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
-          <h3 class="f-oswald">
-            Site-G15, Hansestadt Rostock Germany
-          </h3>
-          <p class="w3-left-align">
-            <strong>The UNC Foundation's</strong> primary aim is to ensure the safe containment and protection of anomalous objects, entities, and phenomena, while reducing potential harm to humanity.
-          </p>
+      <div class="w3-padding-large f-sofiasans">
+        <div class style="margin-left: 10%; margin-right: 10%;">
+          <h2 class="f-oswald" style="margin-left: 1%;">Sites Coordinates</h2>
+          <hr style="color: darkgray; margin-top: -0.5%;">
         </div>
-  
-        <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-          <p>
-          <img src="../../material/blacklogo.png" width="35%">
-          </p>
-        </div>
-      </div>
 
-  </div></div>
-</body>
+        <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
+          <br>
+          <div>
+            <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+              <h3 class="f-oswald">
+                Site-G1, Berlin Germany
+              </h3>
+              <p class="w3-left-align">
+                <strong>The UNC Foundation's</strong> primary aim is to ensure
+                the safe containment and protection of anomalous objects,
+                entities, and phenomena, while reducing potential harm to
+                humanity.
+              </p>
+            </div>
 
-</html>
+            <div class="w3-col w3-row-padding w3-animate-zoom"
+              style="width:40%">
+              <p>
+                <img src="../../material/blacklogo.png" width="35%">
+              </p>
+            </div>
+          </div>
+
+          <div class="w3-col w3-row-padding"
+            style="width:100%; margin-top: 1%;">
+          </div>
+
+          <div>
+            <div class="w3-col w3-row-padding w3-card-4" style="width:60%">
+              <h3 class="f-oswald">
+                Site-G15, Hansestadt Rostock Germany
+              </h3>
+              <p class="w3-left-align">
+                <strong>The UNC Foundation's</strong> primary aim is to ensure
+                the safe containment and protection of anomalous objects,
+                entities, and phenomena, while reducing potential harm to
+                humanity.
+              </p>
+            </div>
+
+            <div class="w3-col w3-row-padding w3-animate-zoom"
+              style="width:40%">
+              <p>
+                <img src="../../material/blacklogo.png" width="35%">
+              </p>
+            </div>
+          </div>
+
+        </div></div>
+    </body>
+
+  </html>
