--- a/unc/ZH/about.html
+++ b/unc/ZH/about.html
@@ -2,94 +2,111 @@
 
 <html>
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 
-<html>
+  <html>
 
-<head>
-  <title>關於我們 - UNC基金會</title>
-  <meta charset="UTF-8">
-  <meta name="description" content="TRPG">
-  <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-  <link rel="stylesheet" href="../css/unc.css">
-  <link rel="icon" href="../favicon.ico">
-  
-  <style>
+    <head>
+      <title>關於我們 - UNC基金會</title>
+      <meta charset="UTF-8">
+      <meta name="description" content="TRPG">
+      <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap"
+        rel="stylesheet">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet"
+        href="https://www.w3schools.com/lib/w3-colors-flat.css">
+      <link rel="stylesheet" href="../css/unc.css">
+      <link rel="icon" href="../favicon.ico">
+      <script src="https://mymemunc.github.io/unc/languageSwitch.js"></script>
+
+      <style>
   </style>
-  
-</head>
 
-<body>
-<!---->
-<div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
+    </head>
 
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
-  </div>
+    <body>
+      <!---->
+      <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
-  <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="doc/0menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
-  </div>
-
-  <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <p class="w3-display-middle"></p>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">基金會站點</a>
-  </div>
-
-  <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-    <a href="../EN/about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
-  </div>
-
-</div>
-<!---->
-
-<div class="w3-padding-large f-sofiasans">
-  <div class="" style="margin-left: 10%; margin-right: 10%;">
-    <h2 class="f-oswald" style="margin-left: 1%;">關於我們</h2>
-    <hr style="color: darkgray; margin-top: -0.5%;">
-  </div>
-  
-    <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
-      <div class="w3-col w3-row-padding" style="width:60%">
-        
-        <h3 class="f-oswald"><u>非常規事件基金會</u></h3>
-          <p class="w3-left-align">
-            <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到適當的收容及控制，同時避免影響普遍人類的日常生活。
-            <br>
-            <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
-            <br>
-            作為<b>基金會調查員</b>，人員須冒著極大的個人風險，不遺餘力地監測和收容異常物品和現象。
-            <br>
-            作爲高度保密組織，公眾對<b>UNC基金會</b>的存在應是不知情的。
-            <br>
-            <b>基金會</b>不受司法管轄權干擾，同時亦被全球各大政府機構授以收容異常物件、實體以及現象的職權與任務。因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
-          <p class="w3-left-align">
-            <br>
-            <em>「消除異常混沌。」</em>
-          </p>
-
-      </div>
-
-      <div class="w3-col w3-row-padding w3-animate-zoom" style="width:40%">
-        <p>
-        <img src="../../material/blacklogo.png" width="50%">
-        </p>
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="index.html"
+            class="w3-button w3-block w3-hover-teal w3-display-middle"><img
+              src="../../material/logo.png" height="64"></a>
         </div>
 
+        <div
+          class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="doc/0menu.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
+        </div>
 
-  </div></div>
-</body>
+        <div
+          class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <p class="w3-display-middle"></p>
+        </div>
 
-</html>
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="about.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
+        </div>
+
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="sites.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle">基金會站點</a>
+        </div>
+
+        <div
+          class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+          <a href="../EN/about.html"
+            class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span
+              class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
+        </div>
+
+      </div>
+      <!---->
+
+      <div class="w3-padding-large f-sofiasans">
+        <div class style="margin-left: 10%; margin-right: 10%;">
+          <h2 class="f-oswald" style="margin-left: 1%;">關於我們</h2>
+          <hr style="color: darkgray; margin-top: -0.5%;">
+        </div>
+
+        <div class="w3-container w3-main w3-center" style="margin-left: 10%;">
+          <div class="w3-col w3-row-padding" style="width:60%">
+
+            <h3 class="f-oswald"><u>非常規事件基金會</u></h3>
+            <p class="w3-left-align">
+              <b>非常規事件基金會（UNC基金會）</b>的核心使命是確保異常物品、實體及現象得到適當的收容及控制，同時避免影響普遍人類的日常生活。
+              <br>
+              <b>基金會</b>於全球範圍內運作，擁有廣泛的設施及分支機構，並且致力於為<b>基金會成員</b>（即<b>基金會調查員</b>）提供高度專業的培訓，以幫助他們在科學、工程和收容程序等領域熟練掌握技能。
+              <br>
+              作為<b>基金會調查員</b>，人員須冒著極大的個人風險，不遺餘力地監測和收容異常物品和現象。
+              <br>
+              作爲高度保密組織，公眾對<b>UNC基金會</b>的存在應是不知情的。
+              <br>
+              <b>基金會</b>不受司法管轄權干擾，同時亦被全球各大政府機構授以收容異常物件、實體以及現象的職權與任務。因此我們在世界各地都享有特殊權力，以協助收容行動及研究之順利。
+              <p class="w3-left-align">
+                <br>
+                <em>「消除異常混沌。」</em>
+              </p>
+
+            </div>
+
+            <div class="w3-col w3-row-padding w3-animate-zoom"
+              style="width:40%">
+              <p>
+                <img src="../../material/blacklogo.png" width="50%">
+              </p>
+            </div>
+
+          </div></div>
+      </body>
+
+    </html>
