--- a/unc/ZH/index.html
+++ b/unc/ZH/index.html
@@ -2,20 +2,24 @@
 
 <html>
 
-<head>
-<title>主頁 - UNC基金會</title>
-<meta charset="UTF-8">
-<meta name="description" content="TRPG">
-<meta name="keywords" content="HTML, CSS, JavaScript, ICT">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-<link rel="stylesheet" href="../css/unc.css">
-<link rel="icon" href="../favicon.ico">
+  <head>
+    <title>主頁 - UNC基金會</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="TRPG">
+    <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet"
+      href="https://www.w3schools.com/lib/w3-colors-flat.css">
+    <link rel="stylesheet" href="../css/unc.css">
+    <link rel="icon" href="../favicon.ico">
+    <script src="https://mymemunc.github.io/unc/languageSwitch.js"></script>
 
-<style>
+    <style>
   body, html {height: 100%}
   .bgimg {
     background-image: url(../../material/bg2.png);
@@ -25,45 +29,60 @@
   }
   </style>
 
-</head>
+  </head>
 
-<body style="background-color: #0B193C;">
-  
-  <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
+  <body style="background-color: #0B193C;">
 
-    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <a href="index.html" class="w3-button w3-block w3-hover-teal w3-display-middle"><img src="../../material/logo.png" height="64"></a>
-    </div>
-  
-    <div class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <a href="doc/0menu.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
-    </div>
-  
-    <div class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <p class="w3-display-middle"></p>
-    </div>
-  
-    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <a href="about.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
-    </div>
-  
-    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <a href="sites.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle">基金會站點</a>
-    </div>
-  
-    <div class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-      <a href="../EN/index.html" class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
-    </div>
-  
-  </div>
+    <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
 
-  <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-    <div class="w3-display-left" style="margin-left: 5%;">
-      <h1 class="w3-jumbo w3-animate-left w3-row w3-display-left f-oswald">歡迎回來，調查人員。</h1>
-      <h2 class="w3-xlarge w3-animate-left w3-row w3-display-left f-oswald" style="margin-top: -6%; margin-left: 10%;">請開始你今天的工作。</h2>
-    </div>
-  </div>
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <a href="index.html"
+          class="w3-button w3-block w3-hover-teal w3-display-middle"><img
+            src="../../material/logo.png" height="64"></a>
+      </div>
 
-</body>
+      <div
+        class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <a href="doc/0menu.html"
+          class="w3-button w3-block w3-hover-pale-green w3-display-middle">文件檔案</a>
+      </div>
+
+      <div
+        class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <p class="w3-display-middle"></p>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <a href="about.html"
+          class="w3-button w3-block w3-hover-pale-green w3-display-middle">關於我們</a>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <a href="sites.html"
+          class="w3-button w3-block w3-hover-pale-green w3-display-middle">基金會站點</a>
+      </div>
+
+      <div
+        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
+        <a href="../EN/index.html"
+          class="w3-button w3-block w3-hover-pale-green w3-display-middle"><span
+            class="w3-text-gray">EN</span>/<span><strong><u>中文</u></strong></span></a>
+      </div>
+
+    </div>
+
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+      <div class="w3-display-left" style="margin-left: 5%;">
+        <h1
+          class="w3-jumbo w3-animate-left w3-row w3-display-left f-oswald">歡迎回來，調查人員。</h1>
+        <h2 class="w3-xlarge w3-animate-left w3-row w3-display-left f-oswald"
+          style="margin-top: -6%; margin-left: 10%;">請開始你今天的工作。</h2>
+      </div>
+    </div>
+
+  </body>
 
 </html>
