Redesign homepage and add 404 error page
Replaces the old index.html with a modern homepage featuring project cards, theme toggle, and improved layout. Adds a custom 404.html error page. Introduces new JavaScript for theme toggling and card effects. Renames Ragnarok project files for consistency and updates style.css with new styles for both pages. The previous homepage is preserved as old_index.html.disabled.

--- a/index.html
+++ b/index.html
@@ -1,85 +1,113 @@
 <!DOCTYPE html>
-
-<html>
-
-  <head>
-    <title>Home - UNC Foundation</title>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="description" content="TRPG">
-    <meta name="keywords" content="HTML, CSS, JavaScript, ICT">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Oswald:wght@500&family=Sofia+Sans:ital@1&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet"
-      href="https://www.w3schools.com/lib/w3-colors-flat.css">
-    <link rel="icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyMem | Storeroom</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <div class="name-container">
+                <span class="name-flash" id="dynamic-name">MyMem</span>
+            </div>
+            's Storeroom
+        </div>
+        <nav>
+            <a href="">Home</a>
+            <a href="404.html">About</a>
+            <a href="404.html">Contact</a>
+        </nav>
+    </header>
 
-    <style>
-  body, html {height: 100%}
-  .bgimg {
-    background-image: url(material/bg2.png);
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-  }
-  </style>
+    <section class="hero">
+        <h1>Where debris is piled up</h1>
+        <p>Keep it simple, stupid</p>
+    </section>
 
-  </head>
+    <div class="projects-grid">
+        <!-- Project 1.1 - UNC Foundation (Ongoing) -->
+        <div class="project-card">
+            <div class="card-image">
+                <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="The UNC Foundation Project">
+            </div>
+            <div class="card-content">
+                <h3>The UNC Foundation Databases</h3>
+                <p>Nullify the Unnatural Chaos - One of the various forces in the TRPG worldview</p>
+                <a href="unc/EN/index.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="status-indicator status-ongoing" title="Ongoing Project"></div>
+        </div>
 
-  <body style="background-color: #0B193C;">
+        <!-- Project 1.2 - Ragnarok (Ongoing) -->
+        <div class="project-card">
+            <div class="card-image">
+                <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Ragnarok Project">
+            </div>
+            <div class="card-content">
+                <h3>Ragnarok</h3>
+                <p>Profit First - One of the various forces in the TRPG worldview</p>
+                <span class="wip-link">WIP</span>
+            </div>
+            <div class="status-indicator status-ongoing" title="Ongoing Project"></div>
+        </div>
 
-    <div class="w3-main w3-row w3-padding w3-teal w3-padding-24">
+        <!-- Project 2 - Dip Sin (Abandon) -->
+        <div class="project-card">
+            <div class="card-image">
+                <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Dip Sin Project">
+            </div>
+            <div class="card-content">
+                <h3>Dip Sin</h3>
+                <p>SM3611 - Audiovisual installation project</p>
+                <a href="dipsin/index.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="status-indicator status-abandon" title="Abandoned Project"></div>
+        </div>
 
-      <div
-        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
+        <!-- Project 3 - Counter (Finish) -->
+        <div class="project-card">
+            <div class="card-image">
+                <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Project Sekai Counter">
+            </div>
+            <div class="card-content">
+                <h3>プロセカ Counter</h3>
+                <p>Interactive tracking tool for rhythm game enthusiasts</p>
+                <a href="prsk_counter/songScore.html" class="card-link">View Project <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="status-indicator status-finish" title="Finished Project"></div>
+        </div>
 
-      <div
-        class="w3-col l2 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
-
-      <div
-        class="w3-col l6 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
-
-      <div
-        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
-
-      <div
-        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
-
-      <div
-        class="w3-col l1 m2 s6 w3-padding w3-display-container w3-padding-16">
-        <p class="w3-display-middle"></p>
-      </div>
-
+        <!-- Project 4 - Lecture (Finish) -->
+        <div class="project-card">
+            <div class="card-image">
+                <img src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Lecture Series">
+            </div>
+            <div class="card-content">
+                <h3>Lecture Repository</h3>
+                <p>Personal repository for college lecture files and revision materials</p>
+                <a href="lecture/index.html" class="card-link">View Lectures <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="status-indicator status-finish" title="Finished Project"></div>
+        </div>
     </div>
 
-    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-      <div class="w3-display-topleft" style="margin-left: 5%;">
-        <br><br><br>
-        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="unc/EN/index.html">The UNC Foundation - Nullify the Unnatural Chaos</a></p>
-        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="rag/index.html">Ragnarok</a></p>
-        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="dipsin/index.html">Dip Sin - SM3611</a></p>
-        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="prsk_counter/songScore.html">プロセカ Counter</a></p>
-        <p class="w3-large w3-animate-left w3-display-left f-sofiasans"><a
-            href="lecture/index.html">Lecture</a></p>
-      </div>
+    <footer>
+        <div class="social-links">
+            <a href="404.html"><i class="fab fa-instagram"></i></a>
+            <a href="404.html"><i class="fab fa-twitter"></i></a>
+            <a href="404.html"><i class="fab fa-github"></i></a>
+        </div>
+        <p class="copyright">© 2024 MyMem. All rights reserved.</p>
+    </footer>
+
+    <div class="theme-toggle">
+        <i class="fas fa-moon"></i>
     </div>
 
-  </body>
+    <script src="js/common.js"></script>
+    <script src="js/index.js"></script>
+</body>
 </html>
