Refactor project card links and update styles
Replaced 'card-link-wrapper' with 'image-link' for project cards in index.html and updated corresponding CSS for improved structure and hover effects.

--- a/dipsin/index.html
+++ b/dipsin/index.html
@@ -13,6 +13,13 @@
     <style>
 body, h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
+.small {
+    transform: scale(0.8);
+    -ms-transform: scale(0.8); /* IE 9 */
+    -webkit-transform: scale(0.8); /* Safari and Chrome */
+    -o-transform: scale(0.8); /* Opera */
+    -moz-transform: scale(0.8); /* Firefox */
+  }
 </style>
 
   </head>
