--- a/index.html
+++ b/index.html
@@ -1,122 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyMem | Storeroom</title>
-    <link rel="shortcut icon" href="material/book.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <div class="name-container">
-                <span class="name-flash" id="dynamic-name">MyMem</span>
-            </div>
-            's Storeroom
-        </div>
-        <nav>
-            <a href="">Home</a>
-            <a href="404.html">About</a>
-            <a href="404.html">Contact</a>
-        </nav>
-    </header>
-
-    <section class="hero">
-        <h1>Where debris is piled up</h1>
-        <p>Keep it simple, stupid</p>
-    </section>
-
-    <div class="projects-grid">
-        <!-- Project 1.1 - UNC Foundation (Ongoing) -->
-        <div class="project-card">
-            <a href="unc/EN/index.html" class="card-link-wrapper">
-                <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="The UNC Foundation Project">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>MyMem | Storeroom</title>
+        <link rel="shortcut icon" href="material/book.png" type="image/x-icon">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <div class="name-container">
+                    <span class="name-flash" id="dynamic-name">MyMem</span>
                 </div>
+                's Storeroom
+            </div>
+            <nav>
+                <a href>Home</a>
+                <a href="404.html">About</a>
+                <a href="404.html">Contact</a>
+            </nav>
+        </header>
+
+        <section class="hero">
+            <h1>Where debris is piled up</h1>
+            <p>Keep it simple, stupid</p>
+        </section>
+
+        <div class="projects-grid">
+            <!-- Project 1.1 - UNC Foundation (Ongoing) -->
+            <div class="project-card">
+                <a href="unc/EN/index.html" class="image-link">
+                    <div class="card-image">
+                        <img
+                            src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
+                            alt="The UNC Foundation Project">
+                    </div>
+                </a>
                 <div class="card-content">
                     <h3>The UNC Foundation Databases</h3>
-                    <p>Nullify the Unnatural Chaos - One of the various forces in the TRPG worldview</p>
-                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                    <p>Nullify the Unnatural Chaos - One of the various forces
+                        in the TRPG worldview</p>
+                    <a href="unc/EN/index.html" class="card-link">View Project
+                        <i class="fas fa-arrow-right"></i></a>
                 </div>
-            </a>
-            <div class="status-indicator status-ongoing" title="Ongoing Project"></div>
-        </div>
-
-        <!-- Project 1.2 - Ragnarok (Ongoing) -->
-        <div class="project-card">
-            <div class="card-image">
-                <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Ragnarok Project">
+                <div class="status-indicator status-ongoing"
+                    title="Ongoing Project"></div>
             </div>
-            <div class="card-content">
-                <h3>Ragnarok</h3>
-                <p>Profit First - One of the various forces in the TRPG worldview</p>
-                <span class="wip-link">WIP</span>
-            </div>
-            <div class="status-indicator status-ongoing" title="Ongoing Project"></div>
-        </div>
 
-        <!-- Project 2 - Dip Sin (Abandon) -->
-        <div class="project-card">
-            <a href="dipsin/index.html" class="card-link-wrapper">
+            <!-- Project 1.2 - Ragnarok (Ongoing) -->
+            <div class="project-card">
                 <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Dip Sin Project">
+                    <img
+                        src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
+                        alt="Ragnarok Project">
                 </div>
+                <div class="card-content">
+                    <h3>Ragnarok</h3>
+                    <p>Profit First - One of the various forces in the TRPG
+                        worldview</p>
+                    <span class="wip-link">WIP</span>
+                </div>
+                <div class="status-indicator status-ongoing"
+                    title="Ongoing Project"></div>
+            </div>
+
+            <!-- Project 2 - Dip Sin (Abandon) -->
+            <div class="project-card">
+                <a href="dipsin/index.html" class="image-link">
+                    <div class="card-image">
+                        <img
+                            src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
+                            alt="Dip Sin Project">
+                    </div>
+                </a>
                 <div class="card-content">
                     <h3>Dip Sin</h3>
                     <p>SM3611 - Audiovisual installation project</p>
-                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                    <a href="dipsin/index.html" class="card-link">View Project
+                        <i class="fas fa-arrow-right"></i></a>
                 </div>
-            </a>
-            <div class="status-indicator status-abandon" title="Abandoned Project"></div>
-        </div>
+                <div class="status-indicator status-abandon"
+                    title="Abandoned Project"></div>
+            </div>
 
-        <!-- Project 3 - Counter (Finish) -->
-        <div class="project-card">
-            <a href="prsk_counter/songScore.html" class="card-link-wrapper">
-                <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Project Sekai Counter">
-                </div>
+            <!-- Project 3 - Counter (Finish) -->
+            <div class="project-card">
+                <a href="prsk_counter/songScore.html" class="image-link">
+                    <div class="card-image">
+                        <img
+                            src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
+                            alt="Project Sekai Counter">
+                    </div>
+                </a>
                 <div class="card-content">
                     <h3>プロセカ Counter</h3>
                     <p>Interactive tracking tool for rhythm game enthusiasts</p>
-                    <span class="card-link">View Project <i class="fas fa-arrow-right"></i></span>
+                    <a href="prsk_counter/songScore.html" class="card-link">View
+                        Project <i class="fas fa-arrow-right"></i></a>
                 </div>
-            </a>
-            <div class="status-indicator status-finish" title="Finished Project"></div>
-        </div>
+                <div class="status-indicator status-finish"
+                    title="Finished Project"></div>
+            </div>
 
-        <!-- Project 4 - Lecture (Finish) -->
-        <div class="project-card">
-            <a href="lecture/index.html" class="card-link-wrapper">
-                <div class="card-image">
-                    <img src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="Lecture Series">
-                </div>
+            <!-- Project 4 - Lecture (Finish) -->
+            <div class="project-card">
+                <a href="lecture/index.html" class="image-link">
+                    <div class="card-image">
+                        <img
+                            src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80"
+                            alt="Lecture Series">
+                    </div>
+                </a>
                 <div class="card-content">
                     <h3>Lecture Repository</h3>
-                    <p>Personal repository for college lecture files and revision materials</p>
-                    <span class="card-link">View Lectures <i class="fas fa-arrow-right"></i></span>
+                    <p>Personal repository for college lecture files and
+                        revision materials</p>
+                    <a href="lecture/index.html" class="card-link">View Lectures
+                        <i class="fas fa-arrow-right"></i></a>
                 </div>
-            </a>
-            <div class="status-indicator status-finish" title="Finished Project"></div>
+                <div class="status-indicator status-finish"
+                    title="Finished Project"></div>
+            </div>
         </div>
-    </div>
 
-    <footer>
-        <div class="social-links">
-            <a href="404.html"><i class="fab fa-instagram"></i></a>
-            <a href="404.html"><i class="fab fa-twitter"></i></a>
-            <a href="404.html"><i class="fab fa-github"></i></a>
+        <footer>
+            <div class="social-links">
+                <a href="404.html"><i class="fab fa-instagram"></i></a>
+                <a href="404.html"><i class="fab fa-twitter"></i></a>
+                <a href="404.html"><i class="fab fa-github"></i></a>
+            </div>
+            <p class="copyright">© 2024 MyMem. All rights reserved.</p>
+        </footer>
+
+        <div class="theme-toggle">
+            <i class="fas fa-moon"></i>
         </div>
-        <p class="copyright">© 2024 MyMem. All rights reserved.</p>
-    </footer>
 
-    <div class="theme-toggle">
-        <i class="fas fa-moon"></i>
-    </div>
-
-    <script src="js/common.js"></script>
-    <script src="js/index.js"></script>
-</body>
+        <script src="js/common.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
